@@ -124,6 +124,26 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">action_act_window_view_list2</field>
         </record>
 
+        <record model="ir.ui.view" id="act_window_domain_view_form">
+            <field name="model">ir.action.act_window.domain</field>
+            <field name="type">form</field>
+            <field name="name">action_act_window_domain_form</field>
+        </record>
+
+        <record model="ir.ui.view" id="act_window_domain_view_list">
+            <field name="model">ir.action.act_window.domain</field>
+            <field name="type">tree</field>
+            <field name="priority" eval="10"/>
+            <field name="name">action_act_window_domain_list</field>
+        </record>
+
+        <record model="ir.ui.view" id="act_window_domain_view_list2">
+            <field name="model">ir.action.act_window.domain</field>
+            <field name="type">tree</field>
+            <field name="priority" eval="20"/>
+            <field name="name">action_act_window_domain_list2</field>
+        </record>
+
         <record model="ir.ui.view" id="action_wizard_view_form">
             <field name="model">ir.action.wizard</field>
             <field name="type">form</field>
