@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form string="Domain" col="6">
+    <label name="name"/>
+    <field name="name"/>
+    <label name="sequence"/>
+    <field name="sequence"/>
+    <label name="active"/>
+    <field name="active"/>
+    <label name="act_window"/>
+    <field name="act_window"/>
+    <newline/>
+    <label name="domain"/>
+    <field name="domain" colspan="5"/>
+</form>
